--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,3 +61,9 @@ jobs:
             . venv/bin/activate
             cd api/wwcodesvtools
             python -m flake8
+            
+workflows:
+  version: 1
+  build-test:
+    jobs:
+      - build
