--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ jobs:
           command: |
             . venv/bin/activate
             cd api/wwcodesvtools
-            python manage.py test -v 2
+            coverage run manage.py test
+      - codecov/upload
       - run:
           name: Running Linting Flake8
           command: |
