--- a/.github/workflows/BE_test_cov.yml
+++ b/.github/workflows/BE_test_cov.yml
@@ -1,19 +1,19 @@
 name: BE-PR-Test
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  pull_request:
-    branches:
-        - "BE.*"
-    types: [opened]
-    paths:
-      - "api/**"
-  push:
-    branches:
-      - "BE.*"
-    paths:
-      - "api/**"
+on: [push, pull_request]
+#  # Triggers the workflow on push or pull request events but only for the main branch
+#  pull_request:
+#    branches:
+#        - "BE.*"
+#    types: [opened]
+#    paths:
+#      - "api/**"
+#  push:
+#    branches:
+#      - "BE.*"
+#    paths:
+#      - "api/**"
 
 jobs:
   build:
