--- a/.github/workflows/BE_test_cov.yml
+++ b/.github/workflows/BE_test_cov.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Run tests and collect coverage
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
+          DEBUG: ${{ secrets.SECRET_KEY }}
         run: cd api/wwcodesvtools; coverage run manage.py test; coverage xml
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
