--- a/.github/workflows/BE_test_cov.yml
+++ b/.github/workflows/BE_test_cov.yml
@@ -30,6 +30,19 @@ jobs:
         env:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
           DEBUG: ${{ secrets.SECRET_KEY }}
+        environment:
+          SENDGRID_API_KEY: SENDGRID_API_KEY
+          EMAIL_BACKEND: 'django.core.mail.backends.smtp.EmailBackend'
+          EMAIL_HOST: 'smtp.sendgrid.net'
+          EMAIL_USE_TLS: True
+          EMAIL_PORT: 587
+          EMAIL_HOST_USER: 'apikey'
+          EMAIL_SENDER: 'WWCodeSV@gmail.com'
+          FRONTEND_APP_URL: 'https://wwcode-chtools-fe.herokuapp.com'
+          LOCAL_FRONTEND_ALLOWED: True
+          DATABASES['default']['ENGINE']: django.db.backends.postgresql
+          DATABASES['default']['NAME']: postgres_test
+          DATABASES['default']['USER']: postgres
         run: cd api/wwcodesvtools; coverage run manage.py test; coverage xml
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
