--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,8 +63,8 @@ jobs:
             cd api/wwcodesvtools
             python -m flake8
             
-workflows:
-  version: 2.1
-  build-test:
-    jobs:
-      - build
+#workflows:
+#  version: 2.1
+#  build-test:
+#    jobs:
+#      - build
