--- a/.github/workflows/BE_test_cov.yml
+++ b/.github/workflows/BE_test_cov.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Install requirements
         run: pip install -r api/wwcodesvtools/requirements.txt
       - name: Run tests and collect coverage
-        run: coverage run manage.py test; coverage xml
+        run: coverage xml
       - name: Upload coverage reports to Codecov with GitHub Action
         uses: codecov/codecov-action@v3
